--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,6 @@
- 
+GITHUB_ID=your_github_id
+GITHUB_SECRET=your_github_secret
+GOOGLE_ID=your_google_id
+GOOGLE_SECRET=your_google_secret
+NEXTAUTH_SECRET=random_secret_here
+NEXTAUTH_URL=http://localhost:3000/ 
