--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,10 @@ yarn-error.log*
 next-env.d.ts
 .env
 .env
+
+# credentials
+GITHUB_ID=your_github_id_here
+GITHUB_SECRET=your_github_secret_here
+GOOGLE_ID=your_google_id_here
+GOOGLE_SECRET=your_google_secret_here
+NEXTAUTH_SECRET=random_string_here
