--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,4 @@ GITHUB_SECRET=your_github_secret_here
 GOOGLE_ID=your_google_id_here
 GOOGLE_SECRET=your_google_secret_here
 NEXTAUTH_SECRET=random_string_here
+.env
